# BlackPlus

./: .gitignore  LICENSE  README.md  pyproject.toml
blackplus/: __init__.py  __main__.py  cli.py  formatter.py
tests/: example_unformatted_copy.py  test_cli.py  test_formatter.py  test_main.py
