[tool.poetry]
name = "blackplus"
version = "0.1.0"
description = "A Python package that extends Black to format code and docstrings with custom configurations."
authors = ["Ryan Peterson <astromined@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
isort = "^5.13.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.3"
pylint = "^3.3.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.blackplus]
[tool.blackplus.docstrings]
sections = [
    {name = "Summary", marker = "", width = 72},
    {name = "Parameters", marker = "Parameters:", width = 72},
    {name = "Returns", marker = "Returns:", width = 72},
    {name = "Examples", marker = "Examples:", width = 72, code_example = {start_marker = "```python", end_marker = "```"}},
]

[tool.poetry.scripts]
blackplus = "blackplus.cli:main"

[tool.pytest.ini_options]
addopts = "--cov=blackplus --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = "88"
